syntax = "proto3";

package file;

option go_package = "github.com/blazee/cloud-drive/microservices/files";

service FileService {
  rpc UploadFile(UploadRequest) returns (UploadResponse);
  rpc DownloadFile(FileRequest) returns (File);
}

message FileRequest {
  string user_id = 1;
  string file_name = 2;
}

message File {
  int64 id = 1;
  string name = 2;
  string user_id = 3;
  bytes chunk = 4;
}

message UploadRequest {
  string file_name = 1;
  string file_type = 2;
  string user_id = 3;
  bytes chunk = 4;
}

message UploadResponse {
  int64 id = 1;
}